# AgentZero

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  requirements.txt  run.sh  setup_openclaw.sh  tsconfig.json
backend/: Cargo.toml
backend/fixtures/: 829 E 14th Ave, Vancouver, BC V5T 2N5 _ MLS# R3090427 _ Redfin.html  For Sale_ L01-788 W 8th Avenue, Vancouver, BC - REW.html  redfin_3662_oak_st.html  strip.py
backend/migrations/: 0001_create_listings.sql  0002_create_images_cache.sql  0003_restructure_images_cache.sql  0004_add_images_position.sql  0005_images_cache_created_at.sql  0006_listings_updated_at.sql  0007_listings_notes.sql  0008_listings_user_details.sql  0009_listings_status.sql  0010_listing_history.sql  0011_listings_nickname.sql  0012_listings_schools.sql  0013_mortgage_params.sql  0014_backfill_mortgage_defaults.sql  0015_add_realtor_url.sql  0016_add_rew_url.sql  0017_add_offer_price.sql  0018_add_monthly_cost.sql  0019_add_zillow_url.sql  0020_add_property_details.sql  0021_images_cache_ext.sql  0022_listings_status_index.sql  0023_listings_status_not_null.sql  0024_add_total_parking_space.sql  0025_rename_parking_columns.sql  0026_unique_mls_number.sql  0027_create_searches.sql  0028_listings_search_id.sql  0029_searches_position.sql  0030_create_open_houses.sql  0031_rename_search_id.sql  0032_rename_search_profile.sql
backend/src/: db.rs  fetch.rs  finance.rs  html_snapshots.rs  image_paths.rs  images.rs  lib.rs  main.rs  parser.rs  utils.rs
backend/src/api/: add.rs  details.rs  images.rs  listings.rs  mod.rs  open_houses.rs  parse.rs  refresh.rs  search_profiles.rs  searches.rs
backend/src/fetching/: html_snapshots.rs
backend/src/images/: cache.rs  mod.rs  paths.rs
backend/src/ingest/: fetch.rs  mod.rs  url.rs
backend/src/models/: history.rs  image.rs  mod.rs  open_house.rs  property.rs  saved_search.rs  search.rs  search_profile.rs
backend/src/parsers/: mod.rs  realtor.rs  redfin.rs  rew.rs  test_support.rs  tests.rs  zillow.rs
backend/src/property/: finance.rs
backend/src/snapshots/: agent_zero_backend__tests__snapshot_extract_property_829_e14th.snap  agent_zero_backend__tests__snapshot_extract_property_829_e14th.snap.new  agent_zero_backend__tests__snapshot_redfin_3662_oak_st.snap  agent_zero_backend__tests__snapshot_redfin_3662_oak_st.snap.new  (+6 more)
backend/src/store/: history_store.rs  mod.rs  (+6 more)
(+59 files in other folders)
