[package]
name = "property_parser"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
actix-cors = "0.7"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.14"
url = "2"
regex = "1"
futures-util = "0.3"
