[package]
name = "property_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.19"
url = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
